...
      'Add olives and drizzle with olive oil.',
      'Season with salt, pepper and oregano.',
    ],
  ),
  Recipe(
    id: '2',
    title: 'Crunchy Nut Coleslaw',
    imageUrl: 'assets/images/recipe_4.jpg',
    category: 'Lunch',
    duration: 10,
    difficulty: 'Easy',
    rating: 3.5,
    reviewCount: '890',
...
